--- a/README
+++ b/README
@@ -1,3 +1,26 @@
++=============================================================================+
+| Notice                                                                      |
++=============================================================================+
+This is a modified version of CURRENNT, by Xin WANG, wangxin@nii.ac.jp.
+New features added:
+1. Highway network 
+   Srivastava, Rupesh K., Klaus Greff, and Jürgen Schmidhuber. "Training very
+   deep networks." Advances in Neural Information Processing Systems. 2015.
+
+2. Mixture mensity model
+   Bishop, Christopher M. "Mixture density networks." (1994).
+
+3. Multi-stream network (based on weight mask)
+      
+4. Easy reading and updating of one-hot vector and continuous vector as input feature
+
+Other features:
+1. initialize selected layers using a trained network
+2. output of intermediate layers
+3. weighted SSE criterion
+4. ReLU for hidden node
+
+
 CURRENNT is written in C++/CUDA and runs on Windows and Linux. It requires a
 CUDA-capable graphics card with a compute capability of 1.3 or higher (i.e. at
 least a GeForce 210, GT 220/40, FX380 LP, 1800M, 370/380M or NVS 2/3100M)
