--- a/README
+++ b/README
@@ -20,6 +20,9 @@ Other features:
 3. weighted SSE criterion
 4. ReLU for hidden node
 
+Please take a look at the CURRENNT_SCRIPTS on my github. There examples related
+to the above modification.
+
 
 CURRENNT is written in C++/CUDA and runs on Windows and Linux. It requires a
 CUDA-capable graphics card with a compute capability of 1.3 or higher (i.e. at
